[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://stage/Stage1.gd" type="Script" id=3]
[ext_resource path="res://spawner/BlackholeSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://stage/TeleportWalls.tscn" type="PackedScene" id=5]
[ext_resource path="res://stage/StageBoundaries.tscn" type="PackedScene" id=6]
[ext_resource path="res://stage/bg.png" type="Texture" id=7]
[ext_resource path="res://stage/Space Travel Arp-full.wav" type="AudioStream" id=8]
[ext_resource path="res://stage/ScoreCounter.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/DeathMenu.tscn" type="PackedScene" id=10]

[node name="Stage1" type="Node2D"]
script = ExtResource( 3 )

[node name="bg" type="Sprite" parent="."]
texture = ExtResource( 7 )
centered = false

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 544.639, 183.199 )

[node name="StageBoundaries" parent="." instance=ExtResource( 6 )]

[node name="BlackholeSpawners" type="Node2D" parent="."]

[node name="BlackholeSpawner" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( -174.355, -190.413 )

[node name="BlackholeSpawner7" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( -154.197, 21.884 )

[node name="BlackholeSpawner8" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( -221.122, 140.659 )

[node name="BlackholeSpawner11" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( -218.523, 216.428 )
rotation = -0.785398

[node name="BlackholeSpawner12" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( -226.523, 389.428 )
rotation = -0.785398

[node name="BlackholeSpawner51" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( -206.306, 489.321 )
rotation = -0.785398

[node name="BlackholeSpawner13" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( -188.933, 875.638 )
rotation = -1.5708

[node name="BlackholeSpawner14" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1434.15, 875.638 )
rotation = -3.14549

[node name="BlackholeSpawner15" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1486.76, 260.341 )
rotation = -4.18879

[node name="BlackholeSpawner17" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1459.01, 503.36 )
rotation = -3.66519

[node name="BlackholeSpawner16" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1462.52, 600.062 )
rotation = -4.18879

[node name="BlackholeSpawner54" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1466.09, 550.115 )
rotation = -4.18878

[node name="BlackholeSpawner18" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1453.54, 64.204 )
rotation = -4.18879

[node name="BlackholeSpawner48" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1453.54, 64.204 )
rotation = -4.18879

[node name="BlackholeSpawner52" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1420.84, 19.0142 )
rotation = -4.18879

[node name="BlackholeSpawner53" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1420.84, 19.0142 )
rotation = -4.18879

[node name="BlackholeSpawner49" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1473.74, 155.685 )
rotation = -3.92699

[node name="BlackholeSpawner50" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1473.74, 155.685 )
rotation = -3.92699

[node name="BlackholeSpawner19" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1481.23, 201.385 )
rotation = -3.66519

[node name="BlackholeSpawner9" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( -215.795, 303.285 )
rotation = -1.0472

[node name="BlackholeSpawner10" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( -231.551, 340.062 )

[node name="BlackholeSpawner20" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( -154.382, 686.275 )
rotation = -0.785398

[node name="BlackholeSpawner21" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( -172.787, 584.337 )
rotation = -0.785398

[node name="BlackholeSpawner22" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( -229.892, 74.6448 )
rotation = -0.785398

[node name="BlackholeSpawner23" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1469.15, 358.167 )
rotation = 2.35619

[node name="BlackholeSpawner24" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1463.46, 419.714 )
rotation = 2.09439

[node name="BlackholeSpawner25" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1132.64, 896.601 )
rotation = 3.14159

[node name="BlackholeSpawner34" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1219.57, 897.231 )
rotation = 3.92699

[node name="BlackholeSpawner35" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 190.749, 898.175 )
rotation = 4.18879

[node name="BlackholeSpawner36" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 28.8744, 899.119 )
rotation = 4.18879

[node name="BlackholeSpawner37" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 254.462, 901.121 )
rotation = 4.71239

[node name="BlackholeSpawner38" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 28.9617, -191.037 )
rotation = 6.54498

[node name="BlackholeSpawner39" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 181.869, -201.42 )
rotation = 6.80678

[node name="BlackholeSpawner40" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 478.534, -203.667 )
rotation = 6.02139

[node name="BlackholeSpawner41" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 789.661, -201.546 )
rotation = 7.85398

[node name="BlackholeSpawner42" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1151.64, -193.995 )
rotation = 7.85398

[node name="BlackholeSpawner43" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1181.37, -190.22 )
rotation = 7.06858

[node name="BlackholeSpawner44" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1034.12, -190.22 )
rotation = 7.06858

[node name="BlackholeSpawner46" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 935.62, -194.22 )
rotation = 7.33037

[node name="BlackholeSpawner45" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 402.178, -204.25 )
rotation = 7.06858

[node name="BlackholeSpawner26" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1055.13, 896.34 )
rotation = 3.92699

[node name="BlackholeSpawner31" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 860.471, 902.01 )
rotation = 3.92699

[node name="BlackholeSpawner32" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 490.054, 900.75 )
rotation = 4.45059

[node name="BlackholeSpawner33" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 521.552, 902.009 )
rotation = 3.40339

[node name="BlackholeSpawner27" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 663.579, 887.876 )
rotation = 3.92699

[node name="BlackholeSpawner28" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 329.492, 893.222 )
rotation = 3.92699

[node name="BlackholeSpawner29" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 103.906, 895.11 )
rotation = 3.92699

[node name="BlackholeSpawner30" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1469.29, 678.299 )
rotation = 2.35619

[node name="BlackholeSpawner47" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1480.94, 314.903 )
rotation = 2.61799

[node name="BlackholeSpawner2" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 1394.58, -136.819 )
rotation = 1.46279

[node name="BlackholeSpawner3" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 564.14, -204.381 )
rotation = 0.261799

[node name="BlackholeSpawner4" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 655.979, -204.121 )
rotation = 0.785398

[node name="BlackholeSpawner5" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 656.509, -204.121 )
rotation = 0.785398

[node name="BlackholeSpawner6" parent="BlackholeSpawners" instance=ExtResource( 4 )]
position = Vector2( 332.313, -200.943 )
rotation = 1.309

[node name="BlackHoleSpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="BlackHoleSpawnTimer2" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="TeleportWalls" parent="." instance=ExtResource( 5 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 640, -35.636 )
stream = ExtResource( 8 )
autoplay = true

[node name="ScoreCounter" parent="." instance=ExtResource( 9 )]
position = Vector2( 32, 8 )
z_index = 999

[node name="Deathmenu" parent="." instance=ExtResource( 10 )]
visible = false
z_index = 999

[node name="IncreaseDifficultyTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true
[connection signal="timeout" from="BlackHoleSpawnTimer" to="." method="_on_BlackHoleSpawnTimer_timeout"]
[connection signal="timeout" from="BlackHoleSpawnTimer2" to="." method="_on_BlackHoleSpawnTimer_timeout"]
[connection signal="timeout" from="IncreaseDifficultyTimer" to="." method="_on_IncreaseDifficultyTimer_timeout"]
